--- a/confe2guardian/template.html
+++ b/confe2guardian/template.html
@@ -6,11 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="http://127.0.0.1/CTparental/css/bootstrap.min.css" type="text/css">
-        <link rel="stylesheet" href="http://127.0.0.1/CTparental/css/main.css" type="text/css">
+        <link rel="stylesheet" href="https://privet.ct.localhost/css/bootstrap.min.css" type="text/css">
+        <link rel="stylesheet" href="https://privet.ct.localhost/css/main.css" type="text/css">
         
-        <script src="http://127.0.0.1/CTparental/js/jquery-1.12.3.min.js"></script>
-        <script src="http://127.0.0.1/CTparental/js/bootstrap.min.js"></script>
+        <script src="https://privet.ct.localhost/js/jquery-1.12.3.min.js"></script>
+        <script src="https://privet.ct.localhost/js/bootstrap.min.js"></script>
     </head>
 
     <body>
@@ -20,7 +20,7 @@
             </div>
             
             <div class="jumbotron">
-                <img src="http://127.0.0.1/CTparental/images/2518388623_1.png" />
+                <img src="https://privet.ct.localhost/images/2518388623_1.png" />
 
                 <h1>Access to the page:</h1>
                 <h2>-URL-</h2>
